WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
53923
REGRESSION (
r77678
): Crash on quit in web process in wWinMain
https://bugs.webkit.org/show_bug.cgi?id=53923
Summary
REGRESSION (r77678): Crash on quit in web process in wWinMain
Adam Roben (:aroben)
Reported
2011-02-07 09:59:44 PST
REGRESSION (
r77678
): Crash on quit in web process in wWinMain
Attachments
Patch
(1.51 KB, patch)
2011-02-07 10:01 PST
,
Adam Roben (:aroben)
sfalken
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Roben (:aroben)
Comment 1
2011-02-07 10:01:14 PST
Created
attachment 81484
[details]
Patch
Adam Roben (:aroben)
Comment 2
2011-02-07 10:51:25 PST
Committed
r77830
: <
http://trac.webkit.org/changeset/77830
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug