Use the right calling convention when calling WebKitMain

Fixes <http://webkit.org/b/53923> REGRESSION (r77678): Crash on quit in web process in
wWinMain

Reviewed by Steve Falkenburg.

* win/MainWin.cpp:
(wWinMain): Use __cdecl instead of WINAPI (__stdcall) when calling WebKitMain, since that is
how that function is declared.

Canonical link: https://commits.webkit.org/67890@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@77830 268f45cc-cd09-0410-ab3c-d52691b4dbfc